# mimir-solana

./: .env.example  .gitignore  .npmrc  README.md  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json
agents/council/: personas.ts  solana.ts
agents/indexer/: solana.ts
agents/market-creator/: solana.ts
agents/oracle/: solana.ts
app/: globals.css  layout.tsx
app/[locale]/: page.tsx
app/[locale]/agents/: page.tsx
app/[locale]/arena/: layout.tsx  page.tsx
app/[locale]/arena/[id]/: page.tsx
app/[locale]/arena/create/: page.tsx
app/[locale]/docs/: page.tsx
app/[locale]/stats/: page.tsx
components/: ArenaProposeCard.tsx  Footer.tsx  Header.tsx  LiveStat.tsx  OppositionLayout.tsx  Plasma.tsx  PlasmaBackdrop.tsx  Stage.tsx  ThemeToggle.tsx
components/arena/: ClaimCard.tsx  CouncilVotes.tsx
components/explorer/: ChallengeOpportunityCard.tsx
components/ui/: Avatar.tsx  GlassCard.tsx
components/vs/: CreateChallengeTicket.tsx  CreateMockFundingOverlay.tsx
docs/: COUNCIL.md  SOLANA.md
lib/: constants.ts  dashboardStakeHoldingsMock.ts  llm.ts
lib/server/: api-validation.ts  council-roster.ts  evidence-fetcher.ts  solana-index.ts
lib/solana/: browser-client.ts  client.ts  config.ts  flashtrade.ts  keypair.ts  wallet-providers.tsx  worldcup.ts
lib/solana/idl/: mimir.json
messages/: en.json
onchain/: Anchor.toml
onchain/programs/mimir/: Cargo.toml
onchain/programs/mimir/src/: lib.rs
scripts/solana/: agent-fund.ts  demo-full-cycle.ts  initialize.ts  system-status.ts
tests/node/: api-validation.test.ts
(+3 files in other folders)
